# shell-utils

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  Makefile  README.md  common.sh  helper_docker.sh  helper_python.sh  helper_terraform.sh  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: main.yml  pre-commit.yml  shellcheck.yml  sonar.yml  test.yml
config/: .asdfrc  .gitconfig  .gitconfig-priv  .vimrc
docker/ollama/: README.md
docs/: gpg.md  poetry.md
functions/: shared.sh
functions/ai/: ollama.sh  open_webui.sh
functions/aws/: bedrock.sh  ec2.sh  ec2_idms.sh  ecr.sh  iam.sh
functions/azure/: aks.sh  az.sh
functions/ci/: artifactory.sh  nexus.sh
functions/containers/: docker.sh  flux.sh  helm.sh  kubernetes.sh  kustomize.sh  run_container.sh  run_pods.sh
functions/devops/: terraform.sh
functions/ebook/: pdf.sh
functions/general/: date.sh  env.sh  envrc.sh  filesystem.sh  ghq.sh  git.sh  python.sh  ssh.sh  wc.sh
functions/macos/: utils.sh
hooks/: check_powershell_filenames.sh  check_shell_filenames.sh
powershell/: README.md
scripts/: common.sh  common_shell.sh  file_structure_exporter.py  get_file_by_type.py  git_insights.py  helper_docker.sh  helper_python.sh  helper_terraform.sh  lookup_shell_functions.py  setup_envrc_venv.sh  simple_web_sever.py  sync_shell_utils.sh  update_git_commits.sh
scripts/atlassian/: get_confluence_table.py  pyproject.toml
security/: find_credentials.py  security_functions.sh  test_dns_AXFR_vulnerability.sh
(+95 files in other folders)
